--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -86,3 +86,36 @@ button {
     line-height: 33px;
 }
 
+#symptoms h2 {
+    padding-top:20px;
+    padding-left:10px;
+    padding-right:10px;
+    text-align:center;
+}
+
+#symptoms h3 {
+    margin-left:30px;
+    padding-top:20px;
+}
+
+ul.mos_com li,ul.ser_com li{
+    line-height: 35px;
+    margin-left: 40px;
+}
+
+#symptoms p {
+    margin-left:30px;
+}
+
+#symptoms p.first {
+    margin-top:10px;
+    padding-top:15px;
+}
+
+#symptoms p.last {
+    padding-bottom:10px;
+}
+
+ul.ser_com {
+    margin-bottom:30px;
+}
