--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,5 +1,35 @@
 @charset "utf-8";
 
+/* button */
+#back2Top {
+    width: 40px;
+    margin-right:30px;
+    line-height: 40px;
+    overflow: hidden;
+    z-index: 999;
+    display: none;
+    cursor: pointer;
+    -moz-transform: rotate(270deg);
+    -webkit-transform: rotate(270deg);
+    -o-transform: rotate(270deg);
+    -ms-transform: rotate(270deg);
+    transform: rotate(270deg);
+    position: fixed;
+    bottom: 50px;
+    right: 0;
+    background-color: #84cb73;
+    color: #fff;
+    text-align: center;
+    font-size: 30px;
+    text-decoration: none;
+    border-radius:10px;
+}
+#back2Top:hover {
+    background-color:#84cb73;
+    color: #fff;
+}
+
+
 /* split home page */
 
 *{
@@ -112,10 +142,50 @@ ul.mos_com li,ul.ser_com li{
     padding-top:15px;
 }
 
-#symptoms p.last {
-    padding-bottom:10px;
-}
-
 ul.ser_com {
     margin-bottom:30px;
+}
+
+#prevention h3 {
+    margin-left:200px;
+    margin-top:10px;
+    position:relative;
+    float:left;
+}
+
+#prevention h3.head{
+    text-align:center;
+    margin-left:250px;
+}
+
+#prevention img {
+    padding:0px;
+    margin-top:0px;
+    margin-left:3px;
+}
+
+
+#prevention .tips{
+    float:none;
+}
+
+.n-tips ul li,.tips ul li {
+    line-height: 35px;
+    margin-left:30px;
+}
+
+div.dos h2,div.donts h2 {
+    margin-top:28px;
+    margin-bottom:30px;
+    text-align:center;
+}
+
+#prevention p.prev_1 {
+    line-height:30px;
+    margin-left:30px;
+    margin-bottom:50px;
+}
+
+#prevention ul {
+    margin-bottom:25%;
 }
