--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -198,6 +198,17 @@ div.dos h2,div.donts h2 {
 }
 
 @media(max-width:700px) {
+    .col-lg-6 {
+        height:100%;
+    }
+    .logoo{
+        margin-top:35%;
+        margin-bottom: 45%;
+    }
+    .col-lg-6 img {
+        width:250px;
+        height:250px;
+    }
     .ov-main,.pv-main {
         background-color:#fff;
     }
